<resources>
    <string name="app_name">ApolloGraphQL (Rails app on Heroku)</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirmation">Confirm password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="name">Name</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="log_out">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="yes_account">Already have an account?</string>
    <string name="action_sign_up">Sign up.</string>
    <string name="title_activity_create_post">CreatePostActivity</string>
    <string name="title_activity_entry">EntryActivity</string>
    <string name="action_settings">Settings</string>
</resources>
